Curated all the playlists and just made all the playlist files

--- a/commands.org
+++ b/commands.org
@@ -8,23 +8,27 @@ This is how I associate youtube's playlist ID's to easily rememberable playlist 
 #+begin_src bash :tangle yes :tangle commands.bash :comments org
   playlists=(
       PLEITERw4PaKFs_uS0MoXkIfGbsYJHmWVU:balatro.m3u
-      PLY9u9wC7ApRJk-tG4_pBtH6ubEJ7svnOB:celeste.m3u
-      PLmOldskd2VbL7_t-NE9p6rEboq_v0AHko:hollow_knight.m3u
-      PLbJE2f8Bl_gRq7g69Z4xfHV7Je-WWvpdJ:terraria.m3u
-      PLsuCmTriuYXdOYZVaKyex5lIy3lT9K_PW:calamity.m3u
-      PLfA6eOuWprRO33noGigJRXO1WXbkfmIlV:calamity_infernum.m3u
-      PLMoZgWjm14OF2AWFfPc3cyQH7T2SC89jo:baba.m3u
-      PLEUKcNuP7bDX9RoW3HqYR6EFvWZh12upZ:deltarune.m3u
-      PLpJl5XaLHtLX-pDk4kctGxtF4nq6BIyjg:undertale.m3u
-      PLhPp-QAUKF_iiixYtOGmynw-BMEju-EWo:isaac_rebirth.m3u
-      PLhPp-QAUKF_gJ9eB-wSlfliMT_6ymDuiI:isaac_afterbirth.m3u
-      PL_sXFbaP261h0WAWyJWKHbLa_haABQHBt:isaac_repentance.m3u
-      PLrWR7klg98H0DbavfBz66OJO_E3wxKVSZ:isaac_antibirth.m3u
-      PLNG8gFz9vUpsLXnWdCEf0svaFEfbY-kHh:minecraft.m3u
-      PLyfXx1BeqwFbl5jg6swxk1XonI-4ldG9X:stardew_valley.m3u
-      PLKDOdCjxOjzL6dnS9DsU4aNYU0ignNtWD:cassette_beasts.m3u
-      PLTsWV3v1dCwpsDgjj2MLiBugQGH_H8D09:RoA.m3u
-      PLHVUN_wezMf9LHGahDuuIiPlog4LI9J8k:rhythm_doctor.m3u
+      PLyfXx1BeqwFbnI87AyqLP5XcEg1u5kydi:celeste.m3u
+      PLyfXx1BeqwFZXtJPE153jA-8NJWz579Pb:hollow_knight.m3u
+      PLyfXx1BeqwFYFwnXDZo6xYSIsek2x2fhp:silksong.m3u
+      PLyfXx1BeqwFb9eMbR78HzJtvhAuGH2rnc:terraria.m3u
+      PLyfXx1BeqwFY7_xMkP9BCAogmUQbwFBjc:calamity.m3u
+      PLyfXx1BeqwFb0IcIT2_cbShbguqGOvnaq:calamity_infernum.m3u
+      PLyfXx1BeqwFaO6xFIQXFhQTJtFdP4WYyc:baba.m3u
+      PLyfXx1BeqwFakIcMEOb5L3hLLuTWHZhFv:deltarune.m3u
+      PLyfXx1BeqwFZoI5JKqSOCYTq9_fxIqPPc:undertale.m3u
+      PLyfXx1BeqwFYwjv_IHypwL_QeR4IT4rW_:isaac_rebirth.m3u
+      PLyfXx1BeqwFYEsmSq2YcXYfPoSxhqUdKj:isaac_afterbirth.m3u
+      PLyfXx1BeqwFYukH-L7NXfhom6UPaSb33N:isaac_repentance.m3u
+      PLyfXx1BeqwFZfbk9ksALFm-Q6hmQPacQ1:isaac_antibirth.m3u
+      PLyfXx1BeqwFZ3paVLhJwsHpuWM4zlhLPj:minecraft.m3u
+      PLyfXx1BeqwFYtf2Dntv405dH8I9FP5GcV:stardew_valley.m3u
+      PLyfXx1BeqwFZw1-JcUkkxHcodnwr_W6Nd:cassette_beasts.m3u
+      PLyfXx1BeqwFYNtQ2sBVUvZ0_PUYvGLe_x:RoA.m3u
+      PLyfXx1BeqwFYvPfUFBjkZvmpFYFbSJQ2R:rhythm_doctor.m3u
+      PLyfXx1BeqwFbcG-8eBmiIbmDtNmn4tq2H:luck_be_a_landlord.m3u
+      PLyfXx1BeqwFZcwV_yqpe5khtlKWGf0jM_:anime.m3u
+      PLyfXx1BeqwFZzRwmxQ1To7HQN37pj1EAs:misc.m3u
   )
 #+end_src
 
@@ -93,79 +97,13 @@ Again, I sequence operations, then run them all at once.
 
   (trap 'kill 0' SIGINT; eval ${commands[*]} wait)
 #+end_src
-* Generate a specific playlist
-  _Run this in the toplevel directory_
-  _Don't download anything in the 'balatro.m3u' playlist unless you want to hear it sped up._
-  #+begin_src shell
-  yt-dlp --restrict-filenames -o 'pool/%(title)s.opus' --get-filename '<playlist-id>' > '<playlist-name>' && notify-send "Finished generating playlist"
-  #+end_src
-* Download a song
-  _Run this in the pool directory_
-  #+begin_src shell
-    yt-dlp -x --audio-quality 0 --restrict-filenames -o '%(title)s' '<playlist-id>' && notify-send "Download Finished"
-  #+end_src
-* Playlists
-** Celeste
-   - id: =PLY9u9wC7ApRJk-tG4_pBtH6ubEJ7svnOB=
-   - name: =celeste.m3u=
-** Hollow Knight
-   - id: =PLmOldskd2VbL7_t-NE9p6rEboq_v0AHko=
-   - name: =hollow_knight.m3u=
-** Terraria
-   - id: =PLbJE2f8Bl_gRq7g69Z4xfHV7Je-WWvpdJ=
-   - name: =terraria.m3u=
-** Calamity
-   - id: =PLsuCmTriuYXdOYZVaKyex5lIy3lT9K_PW=
-   - name: =calamity.m3u=
-** Calamity infernum
-   - id: =PLfA6eOuWprRO33noGigJRXO1WXbkfmIlV=
-   - name: =calamity_infernum.m3u=
-** Baba
-   - id: =PLMoZgWjm14OF2AWFfPc3cyQH7T2SC89jo=
-   - name: =baba.m3u=
-** Deltarune
-   - id: =PLEUKcNuP7bDX9RoW3HqYR6EFvWZh12upZ=
-   - name: =deltarune.m3u=
-** Undertale
-   - id: =PLpJl5XaLHtLX-pDk4kctGxtF4nq6BIyjg=
-   - name: =undertale.m3u=
-** Isaac Rebirth
-   - id: =PLhPp-QAUKF_iiixYtOGmynw-BMEju-EWo=
-   - name: =isaac_rebirth.m3u=
-** Isaac Afterbirth
-   - id: =PLyfXx1BeqwFa91omolDHEBUUC2Ip8f0l_=
-   - name: =isaac_afterbirth.m3u=
-** Isaac Repentance
-   - id: =PL_sXFbaP261ituF7mOuSGHhfmn9G6GIwf=
-   - name: =isaac_repentance.m3u=
-** Isaac Antibirth
-   - id: =PLrWR7klg98H0DbavfBz66OJO_E3wxKVSZ=
-   - name: =isaac_antibirth.m3u=
-** Minecraft
-   - id: =PLefKpFQ8Pvy5aCLAGHD8Zmzsdljos-t2l=
-   - name: =minecraft.m3u=
-** Stardew Valley
-   - id: =PLoku_1Va0MjwRzYb1yfBS3Ob5eyKbBi2p=
-   - name: =stardew_valley.m3u=
-** Cassette beasts
-   - id: =PLKDOdCjxOjzL6dnS9DsU4aNYU0ignNtWD=
-   - name: =cassette_beasts.m3u=
-** Rivals of aether
-   - id: =PLCPLpSD-PMt7l7ZYcdLgBVH7VqmL-VC07=
-   - name: =RoA.m3u=
-** Rhythm doctor
-   - id: =PLHVUN_wezMf9LHGahDuuIiPlog4LI9J8k=
-   - name: =rhythm_doctor.m3u=
-* All Playlist IDs
-  #+begin_src shell
-    playlists="PLY9u9wC7ApRJk-tG4_pBtH6ubEJ7svnOB PLmOldskd2VbL7_t-NE9p6rEboq_v0AHko PLbJE2f8Bl_gRq7g69Z4xfHV7Je-WWvpdJ PLsuCmTriuYXdOYZVaKyex5lIy3lT9K_PW PLfA6eOuWprRO33noGigJRXO1WXbkfmIlV PLMoZgWjm14OF2AWFfPc3cyQH7T2SC89jo PLEUKcNuP7bDX9RoW3HqYR6EFvWZh12upZ PLpJl5XaLHtLX-pDk4kctGxtF4nq6BIyjg PLhPp-QAUKF_iiixYtOGmynw-BMEju-EWo PLyfXx1BeqwFa91omolDHEBUUC2Ip8f0l_ PL_sXFbaP261ituF7mOuSGHhfmn9G6GIwf PLrWR7klg98H0DbavfBz66OJO_E3wxKVSZ PLefKpFQ8Pvy5aCLAGHD8Zmzsdljos-t2l PLoku_1Va0MjwRzYb1yfBS3Ob5eyKbBi2p PLKDOdCjxOjzL6dnS9DsU4aNYU0ignNtWD PLCPLpSD-PMt7l7ZYcdLgBVH7VqmL-VC07 PLHVUN_wezMf9LHGahDuuIiPlog4LI9J8k"
-  #+end_src
-* All Playlist names
-  #+begin_src shell
-    names="celeste.m3u hollow_knight.m3u terraria.m3u calamity.m3u calamity_infernum.m3u baba.m3u deltarune.m3u undertale.m3u isaac_rebirth.m3u isaac_afterbirth.m3u isaac_repentance.m3u isaac_antibirth.m3u minecraft.m3u stardew_valley.m3u cassette_beasts.m3u RoA.m3u rhythm_doctor.m3u"
-  #+end_src
-* Goals [12/15]
-  - [ ] Tailored playlist
+* How to run
+To extract source code in emacs use the *org-babel-tangle* or *org-babel-tangle-file*
+/C-c C-v C-t/ and /C-c C-v C-f/ respectively.
+
+Then run the commands.bash script
+* Goals [14/15]
+  - [X] Tailored playlist
   - [X] Terraria
     - [X] ID acquired
     - [X] Playlist generated
@@ -215,9 +153,9 @@ Again, I sequence operations, then run them all at once.
   - [ ] Drawn to life: The next chapter
     - [ ] ID acquired
     - [ ] Playlist generated
-  - [ ] TF2
-    - [ ] ID acquired
-    - [ ] Playlist generated
+  - [X] TF2
+    - [X] ID acquired
+    - [X] Playlist generated
 * Random Playlist [0/1]
 ** making it
   - [ ] Make a youtube playlist with random stuff
