Fixed the generation of the  playlist and just generally cleaned things up

--- a/commands.org
+++ b/commands.org
@@ -56,7 +56,7 @@ This simply generates the everything playlist which represents all the songs.
 
 More playlists coming soon...
 #+begin_src bash :tangle yes :tangle commands.bash :comments org
-  cat playlists/celeste.m3u playlists/hollow_knight.m3u playlists/terraria.m3u playlists/calamity_infernum.m3u playlists/baba.m3u playlists/deltarune.m3u playlists/undertale.m3u playlists/isaac_rebirth.m3u playlists/isaac_afterbirth.m3u playlists/isaac_repentance.m3u playlists/isaac_antibirth.m3u playlists/minecraft.m3u playlists/stardew_valley.m3u playlists/cassette_beasts.m3u playlists/RoA.m3u playlists/rhythm_doctor.m3u > playlists/everything.m3u
+  eval "cat ${playlists[@]//*:/playlists\/} > playlists/everything.m3u"
 #+end_src
 
 ** Slowing down balatro tracks
@@ -70,10 +70,10 @@ Tracks are slowed down to 75% of of their original speed, just like in the game.
       cd "pool/tmp"
       echo "$(echo ${1##:*})"
       yt-dlp -x --audio-quality 0 --audio-format opus --restrict-filenames -o '%(title)s' "$(echo ${1##:*})";
-      balatro_list="$(ls -1)"
-      for track in $balatro_list; do
+      balatro_list=($(ls))
+      for track in ${balatro_list[@]}; do
 	  echo "track: ($track)"
-	  ffmpeg -y -i "$track" -strict -2 -filter:a "atempo=0.75" -vn "../$track" &
+	  ffmpeg -y -i "$track" -strict -2 -filter:a "atempo=0.75" -vn "../$track"
       done
 
       cd "../.."
