Redid the the org file to a table of playlists

--- a/commands.org
+++ b/commands.org
@@ -1,51 +1,79 @@
 * What's this project
 It's a set of scripts that downloads my playlists.
 
-* How does it work?
-** Playlists
+* Current playlists
+#+NAME: playlists-table
+| name               | id                                 |
+|--------------------+------------------------------------|
+| balatro            | PLEITERw4PaKFs_uS0MoXkIfGbsYJHmWVU |
+| silksong           | PLyfXx1BeqwFYFwnXDZo6xYSIsek2x2fhp |
+| celeste            | PLyfXx1BeqwFbnI87AyqLP5XcEg1u5kydi |
+| hollow_knight      | PLyfXx1BeqwFZXtJPE153jA-8NJWz579Pb |
+| terraria           | PLyfXx1BeqwFb9eMbR78HzJtvhAuGH2rnc |
+| calamity           | PLyfXx1BeqwFY7_xMkP9BCAogmUQbwFBjc |
+| calamity_infernum  | PLyfXx1BeqwFb0IcIT2_cbShbguqGOvnaq |
+| baba               | PLyfXx1BeqwFaO6xFIQXFhQTJtFdP4WYyc |
+| deltarune          | PLyfXx1BeqwFakIcMEOb5L3hLLuTWHZhFv |
+| undertale          | PLyfXx1BeqwFZoI5JKqSOCYTq9_fxIqPPc |
+| isaac_rebirth      | PLyfXx1BeqwFYwjv_IHypwL_QeR4IT4rW_ |
+| isaac_afterbirth   | PLyfXx1BeqwFYEsmSq2YcXYfPoSxhqUdKj |
+| isaac_repentance   | PLyfXx1BeqwFYukH-L7NXfhom6UPaSb33N |
+| isaac_antibirth    | PLyfXx1BeqwFZfbk9ksALFm-Q6hmQPacQ1 |
+| minecraft          | PLyfXx1BeqwFZ3paVLhJwsHpuWM4zlhLPj |
+| stardew_valley     | PLyfXx1BeqwFYtf2Dntv405dH8I9FP5GcV |
+| cassette_beasts    | PLyfXx1BeqwFZw1-JcUkkxHcodnwr_W6Nd |
+| RoA                | PLyfXx1BeqwFYNtQ2sBVUvZ0_PUYvGLe_x |
+| rhythm_doctor      | PLyfXx1BeqwFYvPfUFBjkZvmpFYFbSJQ2R |
+| luck_be_a_landlord | PLyfXx1BeqwFbcG-8eBmiIbmDtNmn4tq2H |
+| anime              | PLyfXx1BeqwFZcwV_yqpe5khtlKWGf0jM_ |
+| misc               | PLyfXx1BeqwFZzRwmxQ1To7HQN37pj1EAs |
 
-This is how I associate youtube's playlist ID's to easily rememberable playlist file names.
-#+begin_src bash :tangle yes :tangle commands.bash :comments org
-  playlists=(
-      PLEITERw4PaKFs_uS0MoXkIfGbsYJHmWVU:balatro.m3u
-      PLyfXx1BeqwFbnI87AyqLP5XcEg1u5kydi:celeste.m3u
-      PLyfXx1BeqwFZXtJPE153jA-8NJWz579Pb:hollow_knight.m3u
-      PLyfXx1BeqwFYFwnXDZo6xYSIsek2x2fhp:silksong.m3u
-      PLyfXx1BeqwFb9eMbR78HzJtvhAuGH2rnc:terraria.m3u
-      PLyfXx1BeqwFY7_xMkP9BCAogmUQbwFBjc:calamity.m3u
-      PLyfXx1BeqwFb0IcIT2_cbShbguqGOvnaq:calamity_infernum.m3u
-      PLyfXx1BeqwFaO6xFIQXFhQTJtFdP4WYyc:baba.m3u
-      PLyfXx1BeqwFakIcMEOb5L3hLLuTWHZhFv:deltarune.m3u
-      PLyfXx1BeqwFZoI5JKqSOCYTq9_fxIqPPc:undertale.m3u
-      PLyfXx1BeqwFYwjv_IHypwL_QeR4IT4rW_:isaac_rebirth.m3u
-      PLyfXx1BeqwFYEsmSq2YcXYfPoSxhqUdKj:isaac_afterbirth.m3u
-      PLyfXx1BeqwFYukH-L7NXfhom6UPaSb33N:isaac_repentance.m3u
-      PLyfXx1BeqwFZfbk9ksALFm-Q6hmQPacQ1:isaac_antibirth.m3u
-      PLyfXx1BeqwFZ3paVLhJwsHpuWM4zlhLPj:minecraft.m3u
-      PLyfXx1BeqwFYtf2Dntv405dH8I9FP5GcV:stardew_valley.m3u
-      PLyfXx1BeqwFZw1-JcUkkxHcodnwr_W6Nd:cassette_beasts.m3u
-      PLyfXx1BeqwFYNtQ2sBVUvZ0_PUYvGLe_x:RoA.m3u
-      PLyfXx1BeqwFYvPfUFBjkZvmpFYFbSJQ2R:rhythm_doctor.m3u
-      PLyfXx1BeqwFbcG-8eBmiIbmDtNmn4tq2H:luck_be_a_landlord.m3u
-      PLyfXx1BeqwFZcwV_yqpe5khtlKWGf0jM_:anime.m3u
-      PLyfXx1BeqwFZzRwmxQ1To7HQN37pj1EAs:misc.m3u
-  )
+#+begin_src bash :tangle no :var playlists=playlists-table :rownames no :colnames yes
+  for playlist_key in ${!playlists[@]}; do
+      echo "$playlist_key -- ${playlists[$playlist_key]}"
+  done
 #+end_src
 
-** Generating the playlist files concurrently
+#+RESULTS:
+| isaac_afterbirth   | -- | PLyfXx1BeqwFYEsmSq2YcXYfPoSxhqUdKj |
+| hollow_knight      | -- | PLyfXx1BeqwFZXtJPE153jA-8NJWz579Pb |
+| luck_be_a_landlord | -- | PLyfXx1BeqwFbcG-8eBmiIbmDtNmn4tq2H |
+| terraria           | -- | PLyfXx1BeqwFb9eMbR78HzJtvhAuGH2rnc |
+| isaac_repentance   | -- | PLyfXx1BeqwFYukH-L7NXfhom6UPaSb33N |
+| anime              | -- | PLyfXx1BeqwFZcwV_yqpe5khtlKWGf0jM_ |
+| balatro            | -- | PLEITERw4PaKFs_uS0MoXkIfGbsYJHmWVU |
+| silksong           | -- | PLyfXx1BeqwFYFwnXDZo6xYSIsek2x2fhp |
+| misc               | -- | PLyfXx1BeqwFZzRwmxQ1To7HQN37pj1EAs |
+| celeste            | -- | PLyfXx1BeqwFbnI87AyqLP5XcEg1u5kydi |
+| calamity_infernum  | -- | PLyfXx1BeqwFb0IcIT2_cbShbguqGOvnaq |
+| minecraft          | -- | PLyfXx1BeqwFZ3paVLhJwsHpuWM4zlhLPj |
+| baba               | -- | PLyfXx1BeqwFaO6xFIQXFhQTJtFdP4WYyc |
+| isaac_rebirth      | -- | PLyfXx1BeqwFYwjv_IHypwL_QeR4IT4rW_ |
+| RoA                | -- | PLyfXx1BeqwFYNtQ2sBVUvZ0_PUYvGLe_x |
+| undertale          | -- | PLyfXx1BeqwFZoI5JKqSOCYTq9_fxIqPPc |
+| stardew_valley     | -- | PLyfXx1BeqwFYtf2Dntv405dH8I9FP5GcV |
+| calamity           | -- | PLyfXx1BeqwFY7_xMkP9BCAogmUQbwFBjc |
+| isaac_antibirth    | -- | PLyfXx1BeqwFZfbk9ksALFm-Q6hmQPacQ1 |
+| cassette_beasts    | -- | PLyfXx1BeqwFZw1-JcUkkxHcodnwr_W6Nd |
+| rhythm_doctor      | -- | PLyfXx1BeqwFYvPfUFBjkZvmpFYFbSJQ2R |
+| deltarune          | -- | PLyfXx1BeqwFakIcMEOb5L3hLLuTWHZhFv |
+
+* How does it work?
+** Playlists
+Emacs declares an associative array based on the table of playlists
 
 This is pretty gnarly by my standards.
 Basically, you make an array to sequence commands by looping once and then running the long running tasks in parallel by launching multiple subshells and using '&'.
 
 It's important that this runs in a subshell or else ctrl-c wouldn't kill all the processes.
-#+begin_src bash :tangle yes :tangle commands.bash :comments org
+#+begin_src bash :tangle yes :tangle commands.bash :comments org :var playlists=playlists-table :rownames no :colnames yes
   commands=()
 
   mkdir playlists
 
-  for playlist_item in ${playlists[@]}; do
-      commands+=("echo \"Generating $(echo ${playlist_item##*:})\" & yt-dlp --restrict-filenames -o '../pool/%(title)s.opus' --get-filename \" \$(echo ${playlist_item##:*})\" > \"$(echo playlists/${playlist_item##*:})\" &")
-  done
+  for playlist_name in ${!playlists[@]}; do
+        commands+=("echo \"Generating \\\"$playlist_name\\\" playlist\" & yt-dlp --restrict-filenames -o '../pool/%(title)s.opus' --get-filename \"${playlists[$playlist_name]}\" > \"$(echo playlists/${playlist_name}.m3u)\" &")
+    done
 
   (trap 'kill 0' SIGINT; eval ${commands[*]} wait)
 #+end_src
@@ -56,7 +84,8 @@ This simply generates the everything playlist which represents all the songs.
 
 More playlists coming soon...
 #+begin_src bash :tangle yes :tangle commands.bash :comments org
-  eval "cat ${playlists[@]//*:/playlists\/} > playlists/everything.m3u"
+  playlist_keys=(${!playlists[@]})
+  eval "cat ${playlist_keys[@]//*/playlists\/&.m3u} > playlists/everything.m3u"
 #+end_src
 
 ** Slowing down balatro tracks
@@ -68,12 +97,12 @@ Tracks are slowed down to 75% of of their original speed, just like in the game.
   handle_balatro () {
       mkdir -p "pool/tmp"
       cd "pool/tmp"
-      echo "$(echo ${1##:*})"
-      yt-dlp -x --audio-quality 0 --audio-format opus --restrict-filenames -o '%(title)s' "$(echo ${1##:*})";
+      echo "$1"
+      yt-dlp -x --audio-quality 0 --audio-format opus --restrict-filenames -o '%(title)s' "${playlists[$1]}";
       balatro_list=($(ls))
       for track in ${balatro_list[@]}; do
-	  echo "track: ($track)"
-	  ffmpeg -y -i "$track" -strict -2 -filter:a "atempo=0.75" -vn "../$track"
+  	  echo "track: ($track)"
+  	  ffmpeg -y -i "$track" -strict -2 -filter:a "atempo=0.75" -vn "../$track"
       done
 
       cd "../.."
@@ -87,11 +116,11 @@ Again, I sequence operations, then run them all at once.
 #+begin_src bash :tangle yes :tangle commands.bash :comments org
   commands=()
 
-  for playlist_item in ${playlists[@]}; do
-      if [ "balatro.m3u" = "$(echo ${playlist_item##*:})" ]; then
-	  commands+=("echo \"\" & handle_balatro \"$playlist_item\" &")
+  for playlist_key in ${!playlists[@]}; do
+      if [ "balatro" = "$playlist_key" ]; then
+  	  commands+=("echo \"Handling balatro\" & handle_balatro \"$playlist_key\" & ")
       else
-	  commands+=("echo \"Downloading: $(echo ${playlist_item##:*})\" & yt-dlp -x --audio-quality 0 --audio-format opus --restrict-filenames -o 'pool/%(title)s' \"$(echo ${playlist_item##:*})\" &")
+  	  commands+=("echo \"Downloading: \"$playlist_key\"\" & yt-dlp -x --audio-quality 0 --audio-format opus --restrict-filenames -o 'pool/%(title)s' \"${playlists[$playlist_key]}\" &")
       fi
   done;
 
