Small formatting change

--- a/commands.org
+++ b/commands.org
@@ -97,7 +97,7 @@ Again, I sequence operations, then run them all at once.
   (trap 'kill 0' SIGINT; eval ${commands[*]} wait)
 #+end_src
 * How to run
-To extract source code in emacs use the *org-babel-tangle* or *org-babel-tangle-file*
+To extract source code in emacs use the =org-babel-tangle= or =org-babel-tangle-file=
 /C-c C-v C-t/ and /C-c C-v C-f/ respectively.
 
 Then run the commands.bash script
