--- a/commands.org
+++ b/commands.org
@@ -1,3 +1,10 @@
+* Table of Contets :TOC_1:
+- [[#whats-this-project][What's this project]]
+- [[#current-playlists][Current playlists]]
+- [[#how-does-it-work][How does it work?]]
+- [[#how-to-run][How to run]]
+- [[#goals-1617][Goals]]
+
 * What's this project
 It's a set of scripts that downloads my playlists.
 
@@ -100,69 +107,25 @@ Again, I sequence operations, then run them all at once.
 To extract source code in emacs use the =org-babel-tangle= or =org-babel-tangle-file=, =C-c C-v C-t= and =C-c C-v C-f= respectively.
 
 Then run the commands.bash script
-* Goals [14/15]
+* TODO Goals [16/17]
   - [X] Tailored playlist
   - [X] Terraria
-    - [X] ID acquired
-    - [X] Playlist generated
   - [X] Calamity Mod (Including extra)
-    - [X] ID acquired
-    - [X] Playlist generated
   - [X] Calamity Infernum Mod
-    - [X] ID acquired
-    - [X] Playlist generated
   - [X] Baba
-    - [X] ID acquired
-    - [X] Playlist generated
   - [X] Deltarune
-    - [X] ID acquired
-    - [X] Playlist generated
   - [X] Undertale
-    - [X] ID acquired
-    - [X] Playlist generated
   - [X] Isaac [4/4]
-    - [X] Issac Rebirth
-      - [X] ID acquired
-      - [X] Playlist generated
+    - [X] Rebirth
     - [X] Isaac Afterbirth
-      - [X] ID acquired
-      - [X] Playlist generated
     - [X] Isaac Repentance
-      - [X] ID acquired
-      - [X] Playlist generated
     - [X] Isaac Antibirth
-      - [X] ID acquired
-      - [X] Playlist generated
   - [X] Minecraft
-    - [X] ID acquired
-    - [X] Playlist generated
   - [X] Stardew Valley
-    - [X] ID acquired
-    - [X] Playlist generated
   - [X] Cassette beasts
-    - [X] ID acquired
-    - [X] Playlist generated
   - [X] Rivals of aether
-    - [X] ID acquired
-    - [X] Playlist generated
   - [X] Rhythm doctor
-    - [X] ID acquired
-    - [X] Playlist generated
   - [ ] Drawn to life: The next chapter
-    - [ ] ID acquired
-    - [ ] Playlist generated
   - [X] TF2
-    - [X] ID acquired
-    - [X] Playlist generated
-* Random Playlist
-** making it
-  - [X] Make a youtube playlist with random stuff
-    - [X] ID acquired
-    - [X] Platlist generated
-** Playlist items
-  - [X] Naz - Tay K Returns to Dreamland 4
-  - [X] Pink Clouds and sticky rain (lookup xidnaf)
-  - [X] smash bros brawl main theme
-  - [X] smash bros ultimate main theme
-  - [X] Xomu - Walpurgis Night
-  - [X] Terraria Slimeium Mod OST - Gelatinous Grasslands
+  - [X] Anime
+  - [X] Misc
